Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.2.0 Alpha
-
Fix Version/s: 5.2.0
-
Component/s: Build tools: qdoc, Documentation
-
Labels:None
-
Commits:8543f86c257f6fed84300764ce51621a4f938fca, b73eb743cd813c1a77de3e8cc40b4479a9ced7b2, 1c2dfc8b607eaeaeebe6080dc7f28d16bd1f5315
Description
When "inheriting" QtQuick.Controls' Button, its properties (they belong to BasicButton) are not inherited properly: http://doc-snapshot.qt-project.org/qt5-stable/qtquickcontrols.index